--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-authors.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-authors.less
@@ -12,3 +12,17 @@ span.disambiguationTitle {
 .form-group .twitter-typeahead {
 	padding-top: 0px;
 }
+
+.pub-person-tab-content .row ul {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+.pub-person-tab-content hr {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.pub-person-tab-content h3.list-headline {
+	margin-top: 30px
+}
