--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
@@ -188,7 +188,10 @@
 										<p class='form-control-static'>${textNoNamesFound}</p>
 									</c:otherwise>
 								</c:choose>
-								<br id='nameInsertionPoint'/><button type='button' class='btn btn-default' data-toggle="modal" data-target="#addName" href='#addPerson'>${textAddAlternateNameButton}</button>
+								<br id='nameInsertionPoint'/>
+								<c:if test="${not empty command.context.loginUser.name}">
+									<button type='button' class='btn btn-default' data-toggle="modal" data-target="#addName" href='#addPerson'>${textAddAlternateNameButton}</button>
+								</c:if>
 							</div>
 						</div>
 						<div class='form-group'>
@@ -197,25 +200,27 @@
 								<input class='form-control' type="text" name='formOrcid' id='formOrcid' placeholder="${textOrcidId}" value="${command.person.orcid}"/>
 							</div>
 						</div>
-						<div class='form-group'>
-							<label class="control-label col-md-4" for='thatsMe'>${textThatsMeLabel}</label>
-								<div class="col-md-6">
-									<div class="checkbox"><label>
-										<c:choose>
-											<c:when test='${not empty command.person.user and command.person.user eq command.context.loginUser.name}'>
-												<input type="checkbox" name='formThatsMe' id='formThatsMe' checked="checked" /> ${textThatsMeButton}
-											</c:when>
-											<c:when test='${not empty command.person.user}'>
-												<a href="${absoluteUrlGenerator.getUserUrlByUserName(command.person.user)}"><c:out value="${command.person.user}"/></a>
-											</c:when>
-											<c:otherwise>
-												<input type="checkbox" name='formThatsMe' id='formThatsMe' /> ${textThatsMeButton}
-											</c:otherwise>
-										</c:choose>
-									</label>
+						<c:if test="${not empty command.context.loginUser.name}">
+							<div class='form-group'>
+								<label class="control-label col-md-4" for='thatsMe'>${textThatsMeLabel}</label>
+									<div class="col-md-6">
+										<div class="checkbox"><label>
+											<c:choose>
+												<c:when test='${not empty command.person.user and command.person.user eq command.context.loginUser.name}'>
+													<input type="checkbox" name='formThatsMe' id='formThatsMe' checked="checked" /> ${textThatsMeButton}
+												</c:when>
+												<c:when test='${not empty command.person.user}'>
+													<a href="${absoluteUrlGenerator.getUserUrlByUserName(command.person.user)}"><c:out value="${command.person.user}"/></a>
+												</c:when>
+												<c:otherwise>
+													<input type="checkbox" name='formThatsMe' id='formThatsMe' /> ${textThatsMeButton}
+												</c:otherwise>
+											</c:choose>
+										</label>
+									</div>
 								</div>
 							</div>
-						</div>
+						</c:if>
 						<div class="row">
 							<div class='col-md-4'>&#160;</div>
 							<div class="col-md-6">
@@ -250,9 +255,11 @@
 					<div class='tab-content pub-person-tab-content'>
 					
 						<div id='ownThesis' class='tab-pane'>
-							<br/>
-							<button style='width: 100%;' class='btn btn-default' data-toggle='modal' data-target='#addThesis'>${textAddThesisButton}</button>
-							<br/>
+							<c:if test="${not empty command.context.loginUser.name}">
+								<br/>
+								<button style='width: 100%;' class='btn btn-default' data-toggle='modal' data-target='#addThesis'>${textAddThesisButton}</button>
+								<br/>
+							</c:if>
 							<h3 class="list-headline"><fmt:message key="person.show.thesis" /></h3>
 							<c:choose>
 								<c:when test="${fn:length(command.thesis) gt 0}">
@@ -282,9 +289,11 @@
 						
 						
 						<div id='ownPublications' class='tab-pane'>
-							<br/>
-							<button style='width: 100%;' class='btn btn-default' data-toggle='modal' data-target='#addSupervisedThesis'>${textAddThesisButton}</button>
-							<br/>
+							<c:if test="${not empty command.context.loginUser.name}">
+								<br/>
+								<button style='width: 100%;' class='btn btn-default' data-toggle='modal' data-target='#addSupervisedThesis'>${textAddThesisButton}</button>
+								<br/>
+							</c:if>
 							<h3 class="list-headline"><fmt:message key="person.show.thesis" /></h3>
 							<c:choose>
 								<c:when test="${fn:length(command.advisedThesis) gt 0}">
