fixed oembed view for bootstrap layout and moved the locale setting to the correct oembed jspx

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/export/oembed.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/export/oembed.jspx
@@ -20,12 +20,17 @@
 
 	<c:set var="resdir" scope="application" value="/resources" />
 
-    <c:set var="showPublicationList" value="${mtl:containsResourceClass(command.resourcetype, 'publication') or mtl:containsResourceClass(command.resourcetype, 'all')}" />
-    <c:set var="showPublication" value="${showPublicationList and empty command.goldStandardPublications.list}" />
-    <c:set var="showBookmark" value="${mtl:containsResourceClass(command.resourcetype, 'bookmark') or mtl:containsResourceClass(command.resourcetype, 'all')}" />
-    <c:set var="bookmarksWidthClass" value="${showPublication and showBookmark ? 'standard' : (showBookmark ? 'wide' : 'narrow')}"/>
-    <c:set var="publicationsWidthClass" value="${showPublication and showBookmark ? 'standard' : (showPublication ? 'wide' : 'narrow')}"/>
-
+	<c:set var="showPublicationList" value="${mtl:containsResourceClass(command.resourcetype, 'publication') or mtl:containsResourceClass(command.resourcetype, 'all')}" />
+	<c:set var="showPublication" value="${showPublicationList and empty command.goldStandardPublications.list}" />
+	<c:set var="showBookmark" value="${mtl:containsResourceClass(command.resourcetype, 'bookmark') or mtl:containsResourceClass(command.resourcetype, 'all')}" />
+	<c:set var="bookmarksWidthClass" value="${showPublication and showBookmark ? 'standard' : (showBookmark ? 'wide' : 'narrow')}"/>
+	<c:set var="publicationsWidthClass" value="${showPublication and showBookmark ? 'standard' : (showPublication ? 'wide' : 'narrow')}"/>
+	
+		<!--+ 
+		| To have the locale available on all pages we set the scope to "request".
+		| see http://stackoverflow.com/questions/333729/how-do-i-access-locale-from-a-jsp 
+		|-->
+	<c:set var="locale" value="${pageContext.response.locale}" scope="request"/>
 
 	<!-- not valid XHTML, since only allowed in <head> -->
 <!--	<base href="${properties['project.home']}"/>-->
@@ -34,14 +39,20 @@
 <!--	<spring:theme code="stylesheet.main" var="stylesheet_main" text="${properties['project.home']}${resdir}/css/style.css"/>-->
 <!--	<link rel="stylesheet" type="text/css" href="${stylesheet_main}" />-->
 	<link rel="stylesheet" type="text/css" href="${properties['project.home']}${resdir}/css/style.css" />
-
+	
+	<c:set var="showPublication" value="${(mtl:containsResourceClass(command.resourcetype, 'publication') or mtl:containsResourceClass(command.resourcetype, 'all')) and empty command.goldStandardPublications.list }" />
+	<c:set var="showBookmark" value="${mtl:containsResourceClass(command.resourcetype, 'bookmark') or mtl:containsResourceClass(command.resourcetype, 'all')}" />
+	
 	<c:if test="${not empty command.bookmark.list}">
 		<resources:bookmarks listView="${command.bookmark}" 
 						loginUserName="${command.context.loginUser.name}" 
 						disableListNavigation="false" 
 						requPath="${requPath}" 
 						widthClassName="${bookmarksWidthClass}"
-		/>
+						showBookmark="${showBookmark}"
+						showPublication="${showPublication}"
+						isClipboard="${false}" 
+		/><!-- FIXME: user can request clipboard page -->
 	</c:if>
 
 
@@ -51,7 +62,10 @@
 						disableListNavigation="false" 
 						requPath="${requPath}" 
 						widthClassName="${publicationsWidthClass}"
-		/>
+						showBookmark="${showBookmark}"
+						showPublication="${showPublication}"
+						isClipboard="${false}" 
+		/><!-- FIXME: user can request clipboard page -->
 	</c:if>
 
 </jsp:root>
