+thread infos about elasticsearch generator processes

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/lucene.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/lucene.jspx
@@ -11,7 +11,8 @@
 	xmlns:form="http://www.springframework.org/tags/form"
 	xmlns:spring="urn:http://www.springframework.org/tags"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"
-	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld">
+	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:es="urn:jsptagdir:/WEB-INF/tags/bstags/admin/elasticsearch">
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	
@@ -242,159 +243,9 @@
 						</p>
 					</c:when>					
 					<c:otherwise>
-						<!-- Bibtex Elasticsearch Index -->
-						<h3><c:out value="${command.esIndicesInfosBibtex.get(0).resourceName} Index " /> 
-							<a onclick="javascript:generateOneEsIndex('${command.esIndicesInfosBibtex.get(0).resourceName}')" href="#generateIndex">
-								<span style="width: 200px; height: 10px; border: 1px; color: grey;">re-generate</span>
-							</a>
-						</h3>
-						<div class="indexProperties">
-							<c:set var= "noIdexMessage" value="${command.esIndicesInfosGoldStandard.get(0).luceneResoruceIndicesInfos.get(0).errorMassage }"/>
-							<c:choose>
-								<c:when test="${noIdexMessage != null }">
-									<p>${noIdexMessage}</p>
-								</c:when>
-								<c:otherwise>
-									<table>
-										<tr>
-											<th>System Path</th>
-											<th>Newest Date</th>
-											<th>last tas id</th>
-										</tr>
-										<c:forEach var="resourceIndexInfo" items="${command.esIndicesInfosBibtex}">
-											<tr>
-												<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-													<td>"${resIndex.basePath}"</td>
-													<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-														<td><fmt:formatDate pattern="yyyy/MM/dd HH:mm:ss" value="${resIndex.indexStatistics.newestRecordDate}" /></td>
-													</c:if>
-													<td><c:out value="${resIndex.indexStatistics.lastTasId}" /></td>
-												</c:forEach>
-											</tr>
-											<!--  TODO
-											<tr>
-												<td>containing docs</td>
-												<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-													<td>${resIndex.indexStatistics.numDocs}</td>
-												</c:forEach>
-											</tr>
-											<tr>
-												<td>deleted docs</td>
-												<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-													<td>${resIndex.indexStatistics.numDeletedDocs}</td>
-												</c:forEach>
-											</tr>
-											-->
-										</c:forEach>									
-									</table>
-								</c:otherwise>	
-							</c:choose>
-							<c:set var="generatingIndex" value="${resourceIndexInfo.generatingIndex}" />
-							<c:if test="${generatingIndex != null}">
-								<p>Currently generating:</p>
-								<div style="width: 202px; height: 12px; border: 1px solid #999999; background-color: #CCCCCC">
-			  					<div style="width: ${generatingIndex.indexGenerationProgress * 2}px; height:10px; border: 1px solid #CCCCCC; background-color: #002244">
-										<!-- placeholder -->
-									</div>
-								</div>
-								<div>
-									<span>${generatingIndex.indexGenerationProgress} % done.</span>
-								</div>
-							</c:if>
-						</div>
-						<!-- Bookamrk Elasticsearch Index -->
-						<h3><c:out value="${command.esIndicesInfosBookmark.get(0).resourceName} Index " /> 
-							<a onclick="javascript:generateOneEsIndex('${command.esIndicesInfosBookmark.get(0).resourceName}', )" href="#generateIndex">
-								<span style="width: 200px; height: 10px; border: 1px; color: grey;">re-generate</span>
-							</a>
-						</h3>
-						<div class="indexProperties">
-							<c:set var= "noIdexMessage" value="${command.esIndicesInfosGoldStandard.get(0).luceneResoruceIndicesInfos.get(0).errorMassage }"/>
-							<c:choose>
-								<c:when test="${noIdexMessage != null }">
-									<p>${noIdexMessage}</p>
-								</c:when>
-								<c:otherwise>
-									<table>
-										<tr>
-											<th>System Path</th>
-											<th>Newest Date</th>
-											<th>last tas id</th>
-										</tr>
-										<c:forEach var="resourceIndexInfo" items="${command.esIndicesInfosBookmark}">
-											<tr>
-												<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-													<td>"${resIndex.basePath}"</td>
-													<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-														<td><fmt:formatDate pattern="yyyy/MM/dd HH:mm:ss" value="${resIndex.indexStatistics.newestRecordDate}" /></td>
-													</c:if>
-													<td><c:out value="${resIndex.indexStatistics.lastTasId}" /></td>
-												</c:forEach>
-											</tr>
-										</c:forEach>									
-									</table>
-								</c:otherwise>
-							</c:choose>						
-							<c:set var="generatingIndex" value="${resourceIndexInfo.generatingIndex}" />
-							<c:if test="${generatingIndex != null}">
-								<p>Currently generating:</p>
-								<div style="width: 202px; height: 12px; border: 1px solid #999999; background-color: #CCCCCC">
-			  					<div style="width: ${generatingIndex.indexGenerationProgress * 2}px; height:10px; border: 1px solid #CCCCCC; background-color: #002244">
-										<!-- placeholder -->
-									</div>
-								</div>
-								<div>
-									<span>${generatingIndex.indexGenerationProgress} % done.</span>
-								</div>
-							</c:if>
-						</div>
-						<!-- GoldStandardPublication elasticsearch Index-->
-						
-						<h3><c:out value="${command.esIndicesInfosGoldStandard.get(0).resourceName} Index " /> 
-							<a onclick="javascript:generateOneEsIndex('${command.esIndicesInfosGoldStandard.get(0).resourceName}')" href="#generateIndex">
-								<span style="width: 200px; height: 10px; border: 1px; color: grey;">re-generate</span>
-							</a>
-						</h3>
-						<div class="indexProperties">
-							<c:set var= "noIdexMessage" value="${command.esIndicesInfosGoldStandard.get(0).luceneResoruceIndicesInfos.get(0).errorMassage }"/>
-							<c:choose>
-								<c:when test="${noIdexMessage != null }">
-									<p>${noIdexMessage}</p>
-								</c:when>
-								<c:otherwise>
-									<table>
-										<tr>
-											<th>System Path</th>
-											<th>Newest Date</th>
-											<th>last tas id</th>
-										</tr>
-										<c:forEach var="resourceIndexInfo" items="${command.esIndicesInfosGoldStandard}">
-											<tr>
-												<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-													<td>"${resIndex.basePath}"</td>
-													<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-														<td><fmt:formatDate pattern="yyyy/MM/dd HH:mm:ss" value="${resIndex.indexStatistics.newestRecordDate}" /></td>
-													</c:if>
-													<td><c:out value="${resIndex.indexStatistics.lastTasId}" /></td>
-												</c:forEach>
-											</tr>
-										</c:forEach>									
-									</table>	
-								</c:otherwise>						
-							</c:choose>		
-							<c:set var="generatingIndex" value="${resourceIndexInfo.generatingIndex}" />
-							<c:if test="${generatingIndex != null}">
-								<p>Currently generating:</p>
-								<div style="width: 202px; height: 12px; border: 1px solid #999999; background-color: #CCCCCC">
-			  					<div style="width: ${generatingIndex.indexGenerationProgress * 2}px; height:10px; border: 1px solid #CCCCCC; background-color: #002244">
-										<!-- placeholder -->
-									</div>
-								</div>
-								<div>
-									<span>${generatingIndex.indexGenerationProgress} % done.</span>
-								</div>
-							</c:if>
-						</div>						
+						<es:esIndicesTable indexInfoList="${command.esIndicesInfosBibtex}"/>
+						<es:esIndicesTable indexInfoList="${command.esIndicesInfosBookmark}"/>
+						<es:esIndicesTable indexInfoList="${command.esIndicesInfosGoldStandard}"/>
 					</c:otherwise>
 				</c:choose>	
 			</c:if>
