--- a/bibsonomy-webapp/src/main/webapp/resources/typeahead.js/css/typeahead.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/typeahead.js/css/typeahead.css
@@ -1,4 +1,5 @@
-.tt-dropdown-menu {
+.tt-menu {
+	width: 100%;
   position: absolute;
   top: 100%;
   left: 0;
@@ -18,18 +19,21 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
 }
-.tt-suggestion > p {
+.tt-suggestion  {
   display: block;
-  padding: 3px 20px;
+  padding: 4px 20px;
   clear: both;
   font-weight: normal;
-  line-height: 1.428571429;
+  line-height: 1.3em;
   color: #333333;
-  white-space: nowrap;
+  text-align: center;
+  /* white-space: nowrap; 
+  background-color: red !important;
+  */
 }
-.tt-suggestion > p:hover,
-.tt-suggestion > p:focus,
-.tt-suggestion.tt-cursor p {
+.tt-suggestion:hover,
+.tt-suggestion:focus,
+.tt-suggestion.tt-cursor {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
@@ -38,10 +42,10 @@
 
 .twitter-typeahead {
 	width:100%;
-	padding-top:5px;
 }
 
+
 .tt-hint {
-	color: #bbb;
-	margin-top: 6px;
+	color: #ccc;
+	/* margin-top: 6px; */
 }
