--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
@@ -404,11 +404,10 @@
 			</fieldset>
 		</jsp:attribute>
 		<jsp:attribute name="modalFooter">
-			<form action="/editPublication" method="post">
+			<form action="/postPublication" method="post">
 				<input type="hidden" name='personId' value='${command.person.personId}'/>
 				<input type="hidden" name='personRole' value='AUTHOR'/>
-				<input type="hidden" name='post.resource.entrytype' value='phdThesis'/>
-				<input type="hidden" name='post.resource.author' value='${command.person.mainName.lastName}, ${command.person.mainName.firstName}'/>
+				<input type="hidden" name='post.resource.entrytype' value='phdthesis'/>
 				<input type="submit" class="btn btn-primary pull-left" name='submit' value='${textNewThesisButton}' />
 			</form>
 			<form id="addThesisForm" action="${absoluteUrlGenerator.getPersonUrl(command.person.personId)}" method="post" class='form-inline'>
