--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/persons.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/persons.jspx
@@ -8,7 +8,8 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"
-	xmlns:s="http://www.springframework.org/tags">
+	xmlns:s="http://www.springframework.org/tags"
+	xmlns:sec="http://www.springframework.org/security/tags">
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	
@@ -121,18 +122,21 @@
 										</div>
 									</form>
 								</div>
-								<div style="text-align: right;">
-									
-									<form action="${absoluteUrlGenerator.getPostPublicationUrl()}">
-										<input type="hidden" name="personId" value=""/>
-										<input type="hidden" name='personRole' value='AUTHOR'/>
-										<input type="hidden" name='post.resource.entrytype' value='phdthesis'/>
-										
-										<fmt:message key="persons.intro.addperson.text"/>
-										<fmt:message key="persons.intro.addperson.button" var="textAddPersonButton"/>
-										<input type="submit" style="margin: 0px 20px 0px 10px;" class="btn btn-sm btn-default" name='submit' id="addPersonBtn" value='${textAddPersonButton}' />
-									</form>
-								</div>
+								<!-- <sec:authorize access="hasRole('ROLE_USER')"> -->
+								<c:if test="${not empty command.context.loginUser.name}">
+									<div style="text-align: right;">
+										<form action="${absoluteUrlGenerator.getPostPublicationUrl()}">
+											<input type="hidden" name="personId" value=""/>
+											<input type="hidden" name='personRole' value='AUTHOR'/>
+											<input type="hidden" name='post.resource.entrytype' value='phdthesis'/>
+											
+											<fmt:message key="persons.intro.addperson.text"/>
+											<fmt:message key="persons.intro.addperson.button" var="textAddPersonButton"/>
+											<input type="submit" style="margin: 0px 20px 0px 10px;" class="btn btn-sm btn-default" name='submit' id="addPersonBtn" value='${textAddPersonButton}' />
+										</form>
+									</div>
+								</c:if>
+								<!-- </sec:authorize> -->
 							</div>
 						
 							
