--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/wikicvpage.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/wikicvpage.jspx
@@ -70,7 +70,7 @@
     	 	-->
 		<jsp:attribute name="headerExt">
 			<link rel="stylesheet" type="text/css" href="${resdir}/css/cv_page.css" />
-			
+			<script type="text/javascript" src="${resdir}/javascript/cv/handlers.js"><!--  --></script>
 	    </jsp:attribute>
 
 		<!--+
