--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/opensocial/authorize.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/opensocial/authorize.jspx
@@ -16,7 +16,7 @@
 	
 	<fmt:message key="navi.oauth.authorization" var="oAuthTitle" />
 	
-	<layout:paneLayout command="${command}" pageTitle="${oAuthTitle}" requPath="${requPath}" headerMessageKey="navi.oauth.authorization">
+	<layout:singleContainerLayout command="${command}" pageTitle="${oAuthTitle}" requPath="${requPath}" headerMessageKey="navi.oauth.authorization" smallBox="true">
 
 		<!--+
 			| page specific styling
@@ -40,35 +40,16 @@
 		</jsp:attribute>
 
 		<!--+
-			| heading 
-			+-->
-		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.oauth.authorization" />
-		</jsp:attribute>
-
-		<!--+
-			| infobox
-			+-->
-		<jsp:attribute name="infobox">
-			<parts:infobox>
-				<jsp:attribute name="infoTextBody">
-					<fmt:message key="oauth.authorization.explanation">
-						<fmt:param value="${properties['project.name']}"/>
-					</fmt:message>
-				</jsp:attribute>
-			</parts:infobox>
-		</jsp:attribute>
-		
-		<!--+
 			| content
 			+-->
 		<jsp:attribute name="content">
-			<bs:alert style="info">
-			<jsp:attribute name="alertBody">
-				<fmt:message key="oauth.authorization.intro"/>
-			</jsp:attribute>
-			</bs:alert>
-			
+			<fmt:message key="oauth.authorization.intro">
+				<fmt:param value="${command.appTitle}"/>
+				<fmt:param value="${command.appDescription}"/>
+				<fmt:param value="${properties['project.name']}"/>
+			</fmt:message>
+			<br/><br/>
+				
 			<c:if test="${not empty command.appIcon}">
 				<div class="oauthIcon">
 					<img src="${command.appIcon}"/>
@@ -76,9 +57,11 @@
 			</c:if>
 			
 			<div class="oauthMeta">
-				<span class="oauthTitle"><c:out value="${command.appTitle}"/></span>
-				<br/><br/>
-				<span class="oauthDescription"><c:out value="${command.appDescription}" default=""/></span>
+				<span class="oauthTitle">
+					<fmt:message key="oauth.authorization.app">
+						<fmt:param value="${command.appTitle}"/>
+					</fmt:message>
+				</span>
 				<br/><br/>
 				
 				<c:set var="denyButtonMsg">
@@ -91,13 +74,24 @@
 				<form class="oauthActions" name="authZForm" action="authorize" method="POST">
 					<input type="hidden" name="oauth_callback" value="${command.callBackUrl}"/>
 					<input type="hidden" name="oauth_token" value="${command.entry.token}"/>
-					<input type="submit" class="btn btn-sm btn-danger" name="authorizeAction" value="Deny"/>
+					<input type="submit" class="btn btn-lg btn-danger" name="authorizeAction" value="${denyButtonMsg}"/>
 					<c:out value=" "/>
-					<input type="submit" class="btn btn-sm btn-success" name="authorizeAction" value="Authorize"/>
+					<input type="submit" class="btn btn-lg btn-success" name="authorizeAction" value="${authorizeButtonMsg}"/>
 				</form>
-				
 			</div>
+			<br/>
+			
+			<div class="tab-content">
+				<bs:alert style="info">
+				<jsp:attribute name="alertBody">
+					<fmt:message key="oauth.authorization.explanation">
+						<fmt:param value="${properties['project.name']}"/>
+					</fmt:message>
+				</jsp:attribute>
+				</bs:alert>
+			</div>
+			
 			<div style="clear: both;"><!-- keep me --></div>
 		</jsp:attribute>
-	</layout:paneLayout>
+	</layout:singleContainerLayout>
 </jsp:root>
